--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -8,7 +8,8 @@ metadata:
   annotations:
     github.com/project-slug: caseyw/liatrio-otel-collector
     # grafana/dashboard-selector: "(tags @> 'backstage-test')"
-    grafana/dashboard-selector: "(title @> 'demo v4')"
+    # grafana/dashboard-selector: "(title @> 'demo v4')"
+    grafana/dashboard-selector: demo-v4
 
   # Tags Docs: https://backstage.io/docs/features/software-catalog/descriptor-format/#metadatatags-optional
   # tags:
