--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -9,7 +9,7 @@ metadata:
     github.com/project-slug: caseyw/liatrio-otel-collector
     # grafana/dashboard-selector: "(tags @> 'backstage-test')"
     # grafana/dashboard-selector: "(title @> 'demo v4')"
-    grafana/dashboard-selector: demo-v4
+    grafana/dashboard-selector: backstage-test
 
   # Tags Docs: https://backstage.io/docs/features/software-catalog/descriptor-format/#metadatatags-optional
   # tags:
