--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -8,6 +8,7 @@ metadata:
   annotations:
     github.com/project-slug: caseyw/liatrio-otel-collector
     grafana/dashboard-selector: backstage-test
+    grafana/overview-dashboard: 'https://liatrio.grafana.net/d/p8-fPWzIzz/demo-v4?orgId=1&kiosk'
 
   # Tags Docs: https://backstage.io/docs/features/software-catalog/descriptor-format/#metadatatags-optional
   # tags:
