--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -8,8 +8,7 @@ metadata:
   annotations:
     github.com/project-slug: caseyw/liatrio-otel-collector
     # https://github.com/K-Phoen/backstage-plugin-grafana/blob/main/docs/dashboards-on-component-page.md
-    # grafana/dashboard-selector: backstage-test
-    grafana/dashboard-selector: "folderTitle @> 'General'"
+    grafana/dashboard-selector: backstage-test
     # https://github.com/K-Phoen/backstage-plugin-grafana/blob/main/docs/embed-dashboards-on-page.md
     grafana/overview-dashboard: 'https://liatrio.grafana.net/d/p8-fPWzIzz/demo-v4?orgId=1&kiosk'
     # https://github.com/K-Phoen/backstage-plugin-grafana/blob/main/docs/alerts-on-component-page.md
